// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText V2 renders a regular input for text and numbers 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper text textarea"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":rf:"
          >
            Describe your favourite colour?
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <textarea
              class="input"
              id=":rf:"
              name="generatedName--:rf:"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputText V2 renders a textarea with 4 rows 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper text textarea"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":rg:"
          >
            Describe your favourite colour?
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <textarea
              class="input"
              id=":rg:"
              name="generatedName--:rg:"
              rows="4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputText Version 1 renders a regular input for text and numbers 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper text"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":r0:"
          >
            Favourite colour
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              id=":r0:"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputText Version 1 renders a textarea 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper text textarea"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":r1:"
          >
            Describe your favourite colour?
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <textarea
              class="input"
              id=":r1:"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputText Version 1 renders a textarea with 4 rows 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper text textarea"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":r2:"
          >
            Describe your favourite colour?
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <textarea
              class="input"
              id=":r2:"
              rows="4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
